[package]
name = "wan"
description = "Commandline interface of Wandbox"
version = "0.0.2-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[dependencies]
clap = "2.20.5"
env_logger = "0.4.2"
error-chain = "0.10.0"
hyper = "0.10.5"
log = "0.3.7"
serde = "0.9.11"
serde_derive = "0.9.11"
serde_json = "0.9.9"
shlex = "0.1.1"
regex = "0.2.1"
lazy_static = "0.2.4"